--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     // ==========================================
     
     // 1. LINE Developersで取得したLIFF ID
-    const MY_LIFF_ID = "2008921315-Q3qiVxkG"; 
+    const MY_LIFF_ID = "2008922475-YB6fVEmh"; 
 
     // 2. 店舗の緯度経度（Googleマップで右クリックして取得）
     // 例: 渋谷スクランブル交差点付近
